fix: gap

--- a/src/components/AuthButton/AuthButton.module.css
+++ b/src/components/AuthButton/AuthButton.module.css
@@ -16,5 +16,5 @@
 .auth-button-card-container div {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: 15px;
 }
